[tool.poetry]
name = "qcodes-driver"
version = "0.1.0"
description = "A driver for integrating the quantum machines QOP with QCoDes"
authors = ["gal <gal@quantum-machines.co>"]

[tool.poetry.dependencies]
python = "^3.9, <3.11"
numpy = "^1.21.2"
qm-qua = "^0.3.1"
qcodes = "^0.29.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
